--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@burnt-labs/abstraxion": "^1.0.0-alpha.67",
+    "elliptic": "^6.6.1",
+    "lucide-react": "^0.544.0",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18"
